Update header styles, add clearfix mixin

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,6 +6,7 @@
 @import 'mixins/after';
 @import 'mixins/border-on-hover';
 @import 'mixins/border';
+@import 'mixins/clearfix';
 @import 'mixins/drop-shadow';
 @import 'mixins/hover';
 @import 'mixins/icon';
