--- a/app/styles/blocks/header.scss
+++ b/app/styles/blocks/header.scss
@@ -1,5 +1,6 @@
 .header {
   @include border(bottom);
+  position: relative;
   width: 100%;
   height: (4.5 * $grid);
   padding: (.5 * $grid) (.5 * $grid) (.5 * $grid - $border-width);
@@ -30,19 +31,22 @@
   }
 }
 
-.header_left {
-  float: left;
+.header_main {
+  padding-right: 10em; // Make room for header_aside
 }
 
-.header_right {
-  float: right;
+.header_aside {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: (.5 * $grid);
 }
 
 .header_title {
   @include transition(all);
   @include typo-scale(1);
+  margin: 0;
   text-overflow: ellipsis;
-  white-space: nowrap;
   overflow: hidden;
 
   .-scrolled & {
@@ -56,12 +60,14 @@
 }
 
 .header_to {
-  @include icon('arrow-long-right');
+  //@include icon('arrow-long-right', false);
+  &:before {
+    content: '\2192';
+  }
 }
 
 .header_date {
   @include transition(all);
-  @include typo-scale(0);
 
   .-scrolled & {
     font-size: $font-size-small;
@@ -71,9 +77,7 @@
 
 .header_metadata,
 .header_pagination {
-  position: relative;
-  margin-left: $grid;
-  float: left;
+  text-align: center;
 }
 
 .header_prev-letter {
