ADWD-1892 Browse letters, load and render fulltext
- Load letter fulltext from remote Solr as JSONP
- Include MathJax to render mathematical notation (loaded via Funnel)
- Step trough all available letters
- Introduce lanes and ability to config views via GET parameter
- Add hover-popups for all actions

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 // TODO: Find a way to glob-import mixins and blocks
 
 @import 'bower_components/reset-css/reset';
+@import 'bower_components/spinners/stylesheets/spinners';
 @import 'vendor/entypo-plus';
 
 @import 'mixins/after';
@@ -10,7 +11,9 @@
 @import 'mixins/drop-shadow';
 @import 'mixins/hover';
 @import 'mixins/icon';
+@import 'mixins/shade';
 @import 'mixins/text-color';
+@import 'mixins/tint';
 @import 'mixins/transition';
 @import 'mixins/typo-scale';
 
@@ -18,8 +21,11 @@
 @import 'util/settings';
 @import 'util/base';
 
-@import 'blocks/ember-view';
+@import 'blocks/content';
 @import 'blocks/header';
+@import 'blocks/lane';
+@import 'blocks/letter';
+@import 'blocks/main';
 @import 'blocks/nav';
 @import 'blocks/popup';
 @import 'blocks/sidebar';
