--- a/app/styles/blocks/main.scss
+++ b/app/styles/blocks/main.scss
@@ -1,9 +1,4 @@
-.ember-view {
-  width: 100%;
-  height: 100%;
-}
-
-.ember-view_main {
+.main {
   @include transition(padding);
   width: 100%;
   vertical-align: top;
