--- a/app/styles/blocks/popup.scss
+++ b/app/styles/blocks/popup.scss
@@ -1,36 +1,56 @@
 .popup {
   @include drop-shadow;
-  @include transition(opacity, top, z-index);
+  @include transition(opacity, z-index);
   position: absolute;
-  left: -(.25 * $grid);
+  left: 0;
+  top: 100%;
   margin: (.25 * $grid) 0 0;
-  padding: (.5 * $grid);
+  padding: (.25 * $grid) (.5 * $grid);
   background: $popup-bg-color;
   color: $text-color;
+  font-size: $font-size;
   opacity: 0;
+  transition-delay: .3s;
+  text-align: left;
   z-index: -1;
 
   &:before {
     display: block;
     position: absolute;
-    top: (-$grid);
+    top: (-.5 * $grid);
     left: (.5 * $grid);
     width: 0;
     height: 0;
-    border: (.5 * $grid) solid transparent;
+    border: (.25 * $grid) solid transparent;
     border-bottom-color: $popup-bg-color;
     content: '';
     z-index: 999;
   }
 
-  &.-visible {
-    top: 100%;
+  &.-right {
+    left: auto;
+    right: 0;
+
+    &:before {
+      left: auto;
+      right: (.5 * $grid);
+    }
+  }
+
+  &.-wide {
+    min-width: (12 * $grid);
+  }
+
+  :hover > & {
     opacity: 1;
     z-index: 99;
   }
 
-
   p {
     margin-bottom: (.5 * $grid);
   }
+}
+
+.popup_parent {
+  position: relative;
 }
