Fix wrong icon on next button if disabled

--- a/app/templates/letter.hbs
+++ b/app/templates/letter.hbs
@@ -50,7 +50,7 @@
             {{#pop-up}}{{format-html-message (intl-get 'letterNumberNext') number=content.brief_nummer_nachfolger}}{{/pop-up}}
           {{/link-to}}
         {{else}}
-          <span class="header_step -prev -disabled">
+          <span class="header_step -next -disabled">
             {{#pop-up}}{{intl-get 'letterNotExistingNext'}}{{/pop-up}}
           </span>
         {{/if}}
