--- a/app/templates/letter.hbs
+++ b/app/templates/letter.hbs
@@ -1,7 +1,7 @@
 <header class="header">
 
   <div class="header_logo">
-    <img src="img/logo-akademie-goettingen.png" alt="{{intl-get 'goettingenAcademyOfSciencesAndHumanities'}}">
+    <img src="img/logo-akademie-goettingen.png" alt="{{t 'goettingenAcademyOfSciencesAndHumanities'}}">
   </div>
 
   {{#if content.brief_nummer}}
@@ -11,21 +11,21 @@
           <span class="header_sender">
             <span class="header_first-name">{{absender_vorname}}</span>
             <span class="header_last-name">{{content.absender_nachname}}</span>
-            {{#pop-up}}{{intl-get 'sender'}}{{/pop-up}}
+            {{#pop-up}}{{t 'sender'}}{{/pop-up}}
           </span>
           <span class="header_to">
-            <span class="sr-only">{{intl-get 'to'}}</span>
+            <span class="sr-only">{{t 'to'}}</span>
           </span>
           <span class="header_recipient">
             <span class="header_first-name">{{content.empfaenger_vorname}}</span>
             <span class="header_last-name">{{content.empfaenger_nachname}}</span>
-            {{#pop-up}}{{intl-get 'recipient'}}{{/pop-up}}
+            {{#pop-up}}{{t 'recipient'}}{{/pop-up}}
           </span>
         </h1>
         <div class="header_dates">
-          <span class="header_date -gregorian">{{format-date content.datum_gregorianisch day='numeric' month='long' year='numeric'}}{{#pop-up}}{{{intl-get 'dateGregorian'}}}{{/pop-up}}</span>
+          <span class="header_date -gregorian">{{format-date content.datum_gregorianisch day='numeric' month='long' year='numeric'}}{{#pop-up}}{{{t 'dateGregorian'}}}{{/pop-up}}</span>
           {{#if content.datum_julianisch}}
-            (<span class="header_date -julian">{{format-date content.datum_julianisch day='numeric' month='long' year='numeric'}}{{#pop-up}}{{{intl-get 'dateJulian'}}}{{/pop-up}}</span>)
+            (<span class="header_date -julian">{{format-date content.datum_julianisch day='numeric' month='long' year='numeric'}}{{#pop-up}}{{{t 'dateJulian'}}}{{/pop-up}}</span>)
           {{/if}}
         </div>
     </div>
@@ -34,36 +34,36 @@
       <div class="header_pagination">
         {{#if content.brief_id_vorgaenger}}
           {{#link-to 'letter' content.brief_id_vorgaenger (query-params view=content.viewQuery) class="header_step -prev"}}
-            {{#pop-up}}{{format-html-message (intl-get 'letterNumberPrev') number=content.brief_nummer_vorgaenger}}{{/pop-up}}
+            {{#pop-up}}{{{t 'letterNumberPrev' number=content.brief_nummer_vorgaenger}}}{{/pop-up}}
           {{/link-to}}
         {{else}}
           <span class="header_step -prev -disabled">
-            {{#pop-up}}{{intl-get 'letterNotExistingPrev'}}{{/pop-up}}
+            {{#pop-up}}{{t 'letterNotExistingPrev'}}{{/pop-up}}
           </span>
         {{/if}}
         <span class="header_current-letter">
           {{content.brief_nummer}}
-          {{#pop-up}}{{{intl-get 'letterNumber'}}}{{/pop-up}}
+          {{#pop-up}}{{{t 'letterNumber'}}}{{/pop-up}}
         </span>
         {{#if content.brief_id_nachfolger}}
           {{#link-to 'letter' content.brief_id_nachfolger (query-params view=content.viewQuery) class="header_step -next"}}
-            {{#pop-up}}{{format-html-message (intl-get 'letterNumberNext') number=content.brief_nummer_nachfolger}}{{/pop-up}}
+            {{#pop-up}}{{{t 'letterNumberNext' number=content.brief_nummer_nachfolger}}}{{/pop-up}}
           {{/link-to}}
         {{else}}
           <span class="header_step -next -disabled">
-            {{#pop-up}}{{intl-get 'letterNotExistingNext'}}{{/pop-up}}
+            {{#pop-up}}{{t 'letterNotExistingNext'}}{{/pop-up}}
           </span>
         {{/if}}
       </div>
       <div class="header_metadata">
-        <span class="header_cite-link">{{intl-get 'recommendedCitation'}}</span>
+        <span class="header_cite-link">{{t 'recommendedCitation'}}</span>
         {{#pop-up wide=true}}
-          <span class="popup_pre-heading">{{intl-get 'historicCriticalEdition'}}</span>
+          <span class="popup_pre-heading">{{t 'historicCriticalEdition'}}</span>
           <h2 class="popup_heading">
             <a href="{{content.brief_url}}">Leibniz, Gottfried Wilhelm: Sämtliche Schriften und Briefe</a>
           </h2>
           <p>Hrsg. v. Berlin-Brandenburgischen Akademie der Wissenschaften / Akademie der Wissenschaften zu Göttingen</p>
-          <h3 class="popup_pre-heading">{{intl-get 'permaLink'}}</h3>
+          <h3 class="popup_pre-heading">{{t 'permaLink'}}</h3>
           <input class="popup_input" type="url" value="{{content.brief_url}}">
         {{/pop-up}}
       </div>
@@ -73,7 +73,7 @@
 
     <div class="header_main">
       <h1 class="header_title">
-        {{format-html-message (intl-get 'letterNotAvailable') id=content.id}}
+        {{format-html-message (t 'letterNotAvailable') id=content.id}}
       </h1>
     </div>
 
@@ -85,7 +85,7 @@
 
   {{#unless rendered}}
     <div class="content_loading">
-      <span class="sr-only">{{{intl-get 'loading'}}}</span>
+      <span class="sr-only">{{{t 'loading'}}}</span>
     </div>
   {{/unless}}
 
@@ -97,9 +97,9 @@
 
         <div class="lane -minimized">
           <nav class="nav -vertical">
-            {{intl-get lane.type}}
+            {{t lane.type}}
             <ul>
-              <li><a href="#" class="nav_button -restore"><span class="popup">{{intl-get 'restore'}}</span></a></li>
+              <li><a href="#" class="nav_button -restore"><span class="popup">{{t 'restore'}}</span></a></li>
             </ul>
           </nav>
         </div>
@@ -111,7 +111,7 @@
     {{else}}
 
       <div class="lane">
-        <p class="letter_fulltext-not-available">{{{intl-get 'fulltextNotAvailable'}}}</p>
+        <p class="letter_fulltext-not-available">{{{t 'fulltextNotAvailable'}}}</p>
       </div>
 
     {{/if}}
