--- a/app/templates/nav.hbs
+++ b/app/templates/nav.hbs
@@ -1,26 +1,26 @@
 <div class="nav {{if showNav '-visible'}}">
 
-  <p class="nav_subheading">{{intl-get 'goettingenAcademyOfSciencesAndHumanities'}}</p>
-  <h2 class="nav_heading">{{intl-get 'leibnizLetters'}}</h2>
+  <p class="nav_subheading">{{t 'goettingenAcademyOfSciencesAndHumanities'}}</p>
+  <h2 class="nav_heading">{{t 'leibnizLetters'}}</h2>
 
   <form class="nav_search" action="http://rep.adw-goe.de/handle/11858/00-001S-0000-0006-AB16-C/discover" method="post">
-    <input name="search" class="nav_input" placeholder="{{intl-get 'search'}}">
-    <input type="submit" value="{{intl-get 'search'}}">
+    <input name="search" class="nav_input" placeholder="{{t 'search'}}">
+    <input type="submit" value="{{t 'search'}}">
   </form>
 
-  <h3 class="nav_subheading">{{intl-get 'browse'}}</h3>
+  <h3 class="nav_subheading">{{t 'browse'}}</h3>
   <ul>
     <li>
-      <a href="http://rep.adw-goe.de/handle/11858/00-001S-0000-0006-AB16-C/browse?type=author" class="nav_link -sender" target="_blank">{{intl-get 'sender'}}</a>
+      <a href="http://rep.adw-goe.de/handle/11858/00-001S-0000-0006-AB16-C/browse?type=author" class="nav_link -sender" target="_blank">{{t 'sender'}}</a>
     </li>
     <li>
-      <a href="{{!-- TODO: Recipient URL has to be available in DSpace --}}" class="nav_link -recipient" target="_blank">{{intl-get 'recipient'}}</a>
+      <a href="{{!-- TODO: Recipient URL has to be available in DSpace --}}" class="nav_link -recipient" target="_blank">{{t 'recipient'}}</a>
     </li>
     <li>
-      <a href="http://rep.adw-goe.de/handle/11858/00-001S-0000-0006-AB16-C/browse?type=dateissued" class="nav_link -date" target="_blank">{{intl-get 'date'}}</a>
+      <a href="http://rep.adw-goe.de/handle/11858/00-001S-0000-0006-AB16-C/browse?type=dateissued" class="nav_link -date" target="_blank">{{t 'date'}}</a>
     </li>
     <li>
-      <a href="http://rep.adw-goe.de/handle/11858/00-001S-0000-0006-AB16-C/browse?type=volume" class="nav_link -number" target="_blank">{{intl-get 'serialNumber'}}</a>
+      <a href="http://rep.adw-goe.de/handle/11858/00-001S-0000-0006-AB16-C/browse?type=volume" class="nav_link -number" target="_blank">{{t 'serialNumber'}}</a>
     </li>
   </ul>
 
@@ -28,18 +28,18 @@
   <ul>
     {{!-- TODO: Update links --}}
     <li>
-      <a href="about" class="nav_link -about">{{intl-get 'aboutThisProjekt'}}</a>
+      <a href="about" class="nav_link -about">{{t 'aboutThisProjekt'}}</a>
     </li>
     <li>
-      <a href="contact" class="nav_link -contact">{{intl-get 'contact'}}</a>
+      <a href="contact" class="nav_link -contact">{{t 'contact'}}</a>
     </li>
     <li>
-      <a href="impressum" class="nav_link -legal">{{intl-get 'impressum'}}</a>
+      <a href="impressum" class="nav_link -legal">{{t 'impressum'}}</a>
     </li>
   </ul>
 
   <p>
-    <a href="http://adw-goe.de" class="nav_link -back">{{intl-get 'goToPortal'}}</a>
+    <a href="http://adw-goe.de" class="nav_link -back">{{t 'goToPortal'}}</a>
   </p>
 
 </div>
