Revert "Update tests"

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,9 @@
 <div class="main {{if showNav '-show-nav'}}">
 
   <div class="top-bar">
-    <a href="{{!-- TODO --}}" class="top-bar_title">{{t 'leibnizLetters'}}</a>
+    <a href="{{!-- TODO --}}" class="top-bar_title">{{intl-get 'leibnizLetters'}}</a>
     <button class="top-bar_toggle-nav" {{action 'toggleNav'}}>
-      <span class="sr-only">{{t 'navigation'}}</span>
+      <span class="sr-only">{{intl-get 'navigation'}}</span>
     </button>
   </div>
 
