Display variants and all metadata (WIP)
- Change Solr query to include variants
- Parse letter fulltext and prefix classes
- Make dynamic internal links functional

Styles:
- Add SCSS mixins for buttons and links
- Change color of loading spinner
- Make header smaller
- Add Sass-generated SVG button
- Update icon mixin for positioning on the right
- Change mixin text-color to a function
- Move shade and tint functions to correct file
- Add function to convert short-hex color to long format for SVG rendering

Templates:
- Add variants template
- Add helper to allow comparisons in hbs if
- Split up letter template
- Update translation
- Add toggleable metadata box

Related to: ADWD-1823, ADWD-1892, ADWD-1789

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,15 +5,14 @@
 @import 'vendor/entypo-plus';
 
 @import 'mixins/after';
-@import 'mixins/border-on-hover';
 @import 'mixins/border';
+@import 'mixins/button';
 @import 'mixins/clearfix';
 @import 'mixins/drop-shadow';
 @import 'mixins/hover';
 @import 'mixins/icon';
-@import 'mixins/shade';
-@import 'mixins/text-color';
-@import 'mixins/tint';
+@import 'mixins/link-border-on-hover';
+@import 'mixins/link-border';
 @import 'mixins/transition';
 @import 'mixins/typo-scale';
 
@@ -26,6 +25,7 @@
 @import 'blocks/lane';
 @import 'blocks/letter';
 @import 'blocks/main';
+@import 'blocks/metadata';
 @import 'blocks/nav';
 @import 'blocks/popup';
 @import 'blocks/sidebar';
