--- a/app/templates/letter.hbs
+++ b/app/templates/letter.hbs
@@ -1,85 +1,6 @@
-<header class="header">
+{{letter-header content=content}}
 
-  <div class="header_logo">
-    <img src="img/logo-akademie-goettingen.png" alt="{{t 'goettingenAcademyOfSciencesAndHumanities'}}">
-  </div>
-
-  {{#if content.brief_nummer}}
-
-    <div class="header_main">
-        <h1 class="header_title">
-          <span class="header_sender">
-            <span class="header_first-name">{{absender_vorname}}</span>
-            <span class="header_last-name">{{content.absender_nachname}}</span>
-            {{#pop-up}}{{t 'sender'}}{{/pop-up}}
-          </span>
-          <span class="header_to">
-            <span class="sr-only">{{t 'to'}}</span>
-          </span>
-          <span class="header_recipient">
-            <span class="header_first-name">{{content.empfaenger_vorname}}</span>
-            <span class="header_last-name">{{content.empfaenger_nachname}}</span>
-            {{#pop-up}}{{t 'recipient'}}{{/pop-up}}
-          </span>
-        </h1>
-        <div class="header_dates">
-          <span class="header_date -gregorian">{{format-date content.datum_gregorianisch day='numeric' month='long' year='numeric'}}{{#pop-up}}{{{t 'dateGregorian'}}}{{/pop-up}}</span>
-          {{#if content.datum_julianisch}}
-            (<span class="header_date -julian">{{format-date content.datum_julianisch day='numeric' month='long' year='numeric'}}{{#pop-up}}{{{t 'dateJulian'}}}{{/pop-up}}</span>)
-          {{/if}}
-        </div>
-    </div>
-
-    <div class="header_aside">
-      <div class="header_pagination">
-        {{#if content.brief_id_vorgaenger}}
-          {{#link-to 'letter' content.brief_id_vorgaenger (query-params view=content.viewQuery) class="header_step -prev"}}
-            {{#pop-up}}{{{t 'letterNumberPrev' number=content.brief_nummer_vorgaenger}}}{{/pop-up}}
-          {{/link-to}}
-        {{else}}
-          <span class="header_step -prev -disabled">
-            {{#pop-up}}{{t 'letterNotExistingPrev'}}{{/pop-up}}
-          </span>
-        {{/if}}
-        <span class="header_current-letter">
-          {{content.brief_nummer}}
-          {{#pop-up}}{{{t 'letterNumber'}}}{{/pop-up}}
-        </span>
-        {{#if content.brief_id_nachfolger}}
-          {{#link-to 'letter' content.brief_id_nachfolger (query-params view=content.viewQuery) class="header_step -next"}}
-            {{#pop-up}}{{{t 'letterNumberNext' number=content.brief_nummer_nachfolger}}}{{/pop-up}}
-          {{/link-to}}
-        {{else}}
-          <span class="header_step -next -disabled">
-            {{#pop-up}}{{t 'letterNotExistingNext'}}{{/pop-up}}
-          </span>
-        {{/if}}
-      </div>
-      <div class="header_metadata">
-        <span class="header_cite-link">{{t 'recommendedCitation'}}</span>
-        {{#pop-up wide=true}}
-          <span class="popup_pre-heading">{{t 'historicCriticalEdition'}}</span>
-          <h2 class="popup_heading">
-            <a href="{{content.brief_url}}">Leibniz, Gottfried Wilhelm: Sämtliche Schriften und Briefe</a>
-          </h2>
-          <p>Hrsg. v. Berlin-Brandenburgischen Akademie der Wissenschaften / Akademie der Wissenschaften zu Göttingen</p>
-          <h3 class="popup_pre-heading">{{t 'permaLink'}}</h3>
-          <input class="popup_input" type="url" value="{{content.brief_url}}">
-        {{/pop-up}}
-      </div>
-    </div>
-
-  {{else}}
-
-    <div class="header_main">
-      <h1 class="header_title">
-        {{format-html-message (t 'letterNotAvailable') id=content.id}}
-      </h1>
-    </div>
-
-  {{/if}}
-
-</header>
+{{letter-metadata content=content}}
 
 <main class="content">
 
