--- a/app/styles/mixins/drop-shadow.scss
+++ b/app/styles/mixins/drop-shadow.scss
@@ -1,3 +1,6 @@
+$shadow-size: 25px !default;
+$shadow-color: rgba(#000, .2) !default;
+
 @mixin drop-shadow {
-  box-shadow: 0 0 $grid rgba($black, .3);
+  box-shadow: 0 0 $shadow-size $shadow-color;
 }
