--- a/app/styles/util/base.scss
+++ b/app/styles/util/base.scss
@@ -19,6 +19,10 @@ body {
 a {
   color: $link-color;
   text-decoration: none;
+
+  &:hover {
+    color: $link-hover-color;
+  }
 }
 
 h1,
@@ -50,6 +54,7 @@ h6 {
 button {
   border: 0;
   outline: 0;
+  font: inherit;
   background: none;
   color: inherit;
   cursor: pointer;
