--- a/app/styles/util/functions.scss
+++ b/app/styles/util/functions.scss
@@ -11,3 +11,39 @@
   }
   @return $ret;
 }
+
+// Add percentage of black to a color
+@function shade($color, $percent) {
+  @return mix(black, $color, $percent);
+}
+
+// Calculate color-text based on background-color
+// https://github.com/getchopstick/chopstick-boilerplate/blob/master/scss/_tools.mixins.scss
+@function auto-color($background-color) {
+  // Calculations based on https://vimeo.com/60224584
+  @if (.2126 * red($background-color) + .7152 * green($background-color) + .0722 * blue($background-color)) / 255 <= .5 {
+    @return mix($white, $background-color, 95%);
+  } @else {
+    @return mix($black, $background-color, 70%);
+  }
+}
+
+// Get the long hex representation of a short hex color for SVG building
+// Note that this returns a string, not a color!
+@function long-hex($color) {
+  // TODO: Validation
+  $colorStr: inspect($color); // converting to string
+  @if type-of($color) != color or str-length($colorStr) != 4 {
+    @error "#{$color} is not a valid short hex color";
+  }
+  $r: str-slice($colorStr, 2, 2);
+  $g: str-slice($colorStr, 3, 3);
+  $b: str-slice($colorStr, 4, 4);
+  $long-hex: '#' + $r + $r + $g + $g + $b + $b;
+  @return $long-hex;
+}
+
+// Add percentage of white to a color
+@function tint($color, $percent) {
+  @return mix(white, $color, $percent);
+}
