--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,10 +1,8 @@
 <div class="main {{if showNav '-show-nav'}}">
 
   <div class="top-bar">
-    <a href="{{!-- TODO --}}" class="top-bar_title">{{t 'leibnizLetters'}}</a>
-    <button class="top-bar_toggle-nav" {{action 'toggleNav'}}>
-      <span class="sr-only">{{t 'navigation'}}</span>
-    </button>
+    <a href="{{! TODO}}" class="top-bar_title">{{t 'leibnizLetters'}}</a>
+    <button class="top-bar_toggle-nav" {{action 'toggleNav'}}>{{t 'menu'}}</button>
   </div>
 
   {{outlet 'letter'}}
