--- a/app/templates/nav.hbs
+++ b/app/templates/nav.hbs
@@ -26,7 +26,7 @@
 
   <h3 class="nav_subheading">Info &amp; Hilfe</h3>
   <ul>
-    {{!-- TODO: Update links --}}
+    {{! TODO: Update links}}
     <li>
       <a href="about" class="nav_link -about">{{t 'aboutThisProjekt'}}</a>
     </li>
