--- a/app/styles/blocks/metadata.scss
+++ b/app/styles/blocks/metadata.scss
@@ -3,7 +3,7 @@
   display: none;
   clear: both;
   padding: (.5 * $grid);
-  background: $shade-color;
+  background: $shade;
 
   h2 {
     margin-bottom: (.5 * $grid);
