--- a/app/styles/mixins/button.scss
+++ b/app/styles/mixins/button.scss
@@ -8,7 +8,7 @@
     background: none;
 
     &:hover {
-      background: $shade-color;
+      background: $shade;
     }
   } @else {
     background: $link-color;
