--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,6 +9,7 @@
 @import 'mixins/button';
 @import 'mixins/clearfix';
 @import 'mixins/drop-shadow';
+@import 'mixins/font';
 @import 'mixins/hover';
 @import 'mixins/icon';
 @import 'mixins/link-border-on-hover';
