Display full language name in metadata
Related to: ADWD-1892

--- a/app/templates/components/letter-metadata.hbs
+++ b/app/templates/components/letter-metadata.hbs
@@ -27,5 +27,5 @@
       {{t 'languages'}}
     {{/if}}
   </h3>
-  <p>{{#each content.sprache as |sprache index|}}{{if index ', '}}{{sprache}}{{/each}}</p>
+  <p>{{#each content.sprache as |sprache index|}}{{if index ', '}}{{t (concat 'language' (ucFirst sprache))}}{{/each}}</p>
 </aside>
